# motion_analysis

./: CMakeLists.txt  README  package.xml
config/: conf.yaml  parameters.yaml  parameters_conf.yaml  parameters_obj.yaml
include/: process.cpp  process.h
launch/: edit_current_configuration.launch  event_detection.launch  motion_analysis.launch  new_configuration.launch  object_event_detection.launch
msg/: BoundingBox.msg  StringWithHeader.msg  shapes_msg.msg
src/: conf.py  motion_analysis.cpp
